# UnderworldAdventures

./: .gitignore  README.md  appveyor.yml
uwadv/: .cvsignore  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  ChangeLog  Clean.cmd  Makefile.am  Makefile.mingw  Patch-BuildVersion.ps1  README  README.Developer.md  README.Manual.md  README.Tools.md  README.md  SonarCloud.cmd  UnitTestsAndCoverage.cmd  acinclude.m4  autogen.sh  configure.ac  uwadv.dsw  uwadv.sln  vcpkg.json
uwadv/android/: .gitignore  BuildAndroid.cmd  CMakeLists.txt  gradle.properties  settings.gradle
uwadv/android/app/: build.gradle
uwadv/android/custom-triplets/: arm64-android-dynamic.cmake
uwadv/cppcheck/: RunCppCheck.cmd  cppcheck-suppress.txt  cppcheck.props  cppcheck.vcxproj
uwadv/debian/: README.Debian  changelog  conffiles  config  control  copyright  dirs  docs  menu  postinst  postrm  rules  templates
uwadv/docs/: .cvsignore  Authors.txt  Changes  Features.md  License.installer.txt  README  README.Developer.md  README.Linux.txt  README.Lua.txt  README.Manual.md  README.Tools.md  README.dev.txt  README.md  README.mingw32.txt  README.music.txt  README.tools.txt  README.uwadv.txt  README.vc8express.txt  Readme.txt  authors.txt  recreate_docs.bat  ua-diffs.txt  ua-doxygen.cfg  ua-module-dependencies.dot  ua-todo-list.txt  uw-formats.txt  uw1-keyboard.txt  uw1-walkthrough.txt  uw2-keyboard.txt  uw2-spellbook.txt  uw2-walkthrough.txt
uwadv/docs/docbook/: uadebug-manual.xml  uwadv-manual.xml
uwadv/doxygen/: RunDoxygen.cmd  doxygen.cfg  doxygen.props  doxygen.vcxproj  doxygen.vcxproj.filters  ua-module-dependencies.dot
uwadv/hacking/: .cvsignore  Makefile.am  bytdecode.cpp  cnvdec.cpp  crit_ai.cpp  critdec.cpp  cutsdec.cpp  fontdecode.cpp  gamestrings.cpp  grdecode.cpp  hacking.cpp  hacking.dsw  hacking.h  hacking.vcxproj  levarkdec.cpp  miscdecode.cpp  sgdecode.cpp  trdecode.cpp  uwmdldec.cpp
uwadv/hacking/cnvdec/: .cvsignore  cnvdec.cpp  cnvdec.dsp
uwadv/hacking/crit_ai/: .cvsignore  crit_ai.cpp  crit_ai.dsp  crit_ai.dsw
uwadv/hacking/critdec/: critdec.cpp  critdec.dsp
uwadv/hacking/cutsdec/: cutsdec.cpp  cutsdec.dsp
uwadv/hacking/fontdecode/: fontdecode.cpp  fontdecode.dsp
uwadv/hacking/grdecode/: grdecode.cpp  grdecode.dsp
uwadv/hacking/levarkdec/: .cvsignore  levarkdec.cpp  levarkdec.dsp
uwadv/hacking/miscdecode/: miscdecode.cpp  miscdecode.dsp
uwadv/hacking/sgdecode/: sgdecode.cpp  sgdecode.dsp
uwadv/hacking/stringextract/: stringextract.cpp  stringextract.dsp
uwadv/hacking/trdecode/: trdecode.cpp  trdecode.dsp
uwadv/hacking/uwmdldec/: uwmdldec.cpp  uwmdldec.dsp
uwadv/lang/: lang_de.txt
uwadv/linux/: ua-lowercase-all.pl  uwadv.6.in  uwadv.cfg.in  uwadv.spec.in
uwadv/macosx/: Info.plist
uwadv/macosx/English.lproj/: InfoPlist.strings
uwadv/macosx/uwadv.xcode/: project.pbxproj
uwadv/macosx/uwadv.xcodeproj/: project.pbxproj
uwadv/misc/: makevis.cpp  ripmod.c  uw1-combinations.txt  uw1-common-obj-prop.txt  uw1-levelobjs-level1.txt  uw1-object-classes.txt
uwadv/source/: .cvsignore  GameInterface.hpp  IBasicGame.hpp  IDebugServer.hpp  IGameInstance.hpp  IScreenHost.hpp  IUserInterface.hpp  Makefile.am  Makefile.common  Makefile.in  audio.hpp  cfgfile.hpp  common.hpp  core.hpp  critter.cpp  critter.hpp  cutscene.cpp  cutscene.hpp  dbgserver.hpp  debug.cpp  debug.hpp  files.cpp  files.hpp  font.cpp  font.hpp  game_interface.hpp  gamecfg.cpp  gamecfg.hpp  gamestrings.cpp  gamestrings.hpp  image.cpp  image.hpp  imgquad.cpp  imgquad.hpp  inventory.cpp  inventory.hpp  keymap.cpp  keymap.hpp  level.cpp  level.hpp  (+45 more)
uwadv/source/audio/: Audio.cpp  Audio.hpp  CMakeLists.txt  IODataSource.hpp  Makefile.am  Makefile.common  MidiPlayer.cpp  MidiPlayer.hpp  Playlist.cpp  Playlist.hpp  VoiceFile.cpp  VoiceFile.hpp  VoiceResample.cpp  audio.cpp  audio.hpp  audio.vcxproj  audio.vcxproj.filters  midi.cpp  midi.hpp  midiplayer.cpp  midiplayer.hpp  pch.cpp  pch.hpp  playlist.cpp  playlist.hpp  resamp.c  resamp.h  vocfile.cpp  vocfile.hpp  vocresample.cpp  xmidi.cpp  xmidi.hpp
uwadv/source/base/: .cvsignore  ArchiveFile.cpp  ArchiveFile.hpp  Base.cpp  Base.hpp  CMakeLists.txt  Color3ub.cpp  Color3ub.hpp  ConfigFile.cpp  ConfigFile.hpp  Constants.hpp  Exception.hpp  File.cpp  File.hpp  FileSystem.cpp  FileSystem.hpp  KeyValuePairTextFileReader.cpp  KeyValuePairTextFileReader.hpp  Keymap.cpp  Keymap.hpp  Makefile.am  Makefile.common  Math.hpp  Path.cpp  Path.hpp  Plane3d.hpp  ResourceManager.cpp  ResourceManager.hpp  SDL_rwops_gzfile.c  SDL_rwops_gzfile.h  SDL_rwops_zzip.c  SDL_rwops_zzip.h  Savegame.cpp  Savegame.hpp  Settings.cpp  Settings.hpp  SettingsLoader.cpp  String.cpp  String.hpp  TextFile.cpp  (+45 more)
uwadv/source/conv/: CMakeLists.txt  CodeGraph.cpp  CodeGraph.hpp  CodeVM.cpp  CodeVM.hpp  ConvStack.hpp  Conversation.cpp  Conversation.hpp  ConversationDebugger.cpp  ConversationDebugger.hpp  Makefile.am  Opcodes.hpp  codevm.cpp  codevm.hpp  conv.cpp  conv.hpp  conv.vcxproj  conv.vcxproj.filters  convglobals.cpp  convglobals.hpp  convgraph.cpp  convgraph.hpp  convstack.hpp  opcodes.hpp  pch.cpp  pch.hpp
uwadv/source/debug/: Makefile.am  Makefile.common  dbgapp.cpp  dbgapp.hpp  dbgclient.cpp  dbgclient.hpp  dbgcommon.hpp  editlist.cpp  editlist.hpp  hotspotlist.cpp  hotspotlist.hpp  luasrcframe.cpp  luasrcframe.hpp  mainframe.cpp  mainframe.hpp  objectlist.cpp  objectlist.hpp  pch.cpp  playerinfo.cpp  playerinfo.hpp  tilemapview.cpp  tilemapview.hpp  uwaccess.cpp  uwaccess.hpp
uwadv/source/game/: BasicGame.cpp  BasicGame.hpp  CMakeLists.txt  DebugServer.cpp  DebugServer.hpp  GameConfig.cpp  (+13 more)
uwadv/uadata/: .cvsignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.common  README.Data.md  Underworld Adventures Soundtrack.m3u  build.cmd  uadata.vcxproj  uadata.vcxproj.filters  uwadv-loading.tga
uwadv/win32/: .cvsignore  animview.dsp  cnvdasm.dsp  cnvdbg.dsp  map3ds.dsp  mapdisp.dsp  strpak.dsp  tools.dsw  toolslib.dsp  uaconfig.dsp  uadebug.dsp  uaopt.dsp  uwadv.cfg  uwadv.dsp  uwadv.nsi  uwdump.dsp  uwmdlview.dsp  wrlview.dsp  xmi2mid.dsp
(+1071 files in other folders)
