AUTOMAKE_OPTIONS = foreign

SUBDIRS = hacking source uadata

EXTRA_DIST =  \
	uwadv.spec \
	Makefile.mingw \
	uwadv.dsw \
	docs/Authors.txt \
	docs/README.dev.txt \
	docs/README.Linux.txt \
	docs/README.Lua.txt \
	docs/README.mingw32.txt \
	docs/README.tools.txt \
	docs/README.uwadv.txt \
	docs/ua-doxygen.cfg \
	docs/uw1-walkthrough.txt \
	docs/uw2-walkthrough.txt \
	docs/uw-formats.txt \
	misc/anmformt.zip \
	misc/uw1-combinations.txt \
	misc/uw1-common-obj-prop.txt \
	misc/uw1-levelobjs-level1.txt \
	misc/uw1-object-classes.txt \
	misc/uw1-objects.png \
	misc/uw1-palette0.png
