EXTRA_DIST = \
	hacking.dsw \
	hacking.h \
	cnvdec/cnvdec.cpp cnvdec/cnvdec.dsp \
	critdec/critdec.cpp critdec/critdec.dsp \
	cutsdec/cutsdec.cpp cutsdec/cutsdec.dsp \
	fontdecode/fontdecode.cpp fontdecode/fontdecode.dsp \
	grdecode/grdecode.cpp grdecode/grdecode.dsp \
	levarkdec/levarkdec.cpp levarkdec/levarkdec.dsp \
	miscdecode/miscdecode.cpp miscdecode/miscdecode.dsp \
	sgdecode/sgdecode.cpp sgdecode/sgdecode.dsp \
	stringextraxt/stringextract.cpp stringextract/stringextract.dsp \
	trdecode/trdecode.cpp trdecode/trdecode.dsp
